apps/tanque/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tanque
spec:
  type: ExternalName
  externalName: tanque.iot.grigri
