apps/tanque/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanque
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/target: grigri.cloud
    nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=tanque-users@idm.grigri.cloud
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  ingressClassName: nginx-external
  rules:
    - host: tanque.grigri.cloud
      http:
        paths:
          - backend:
              service:
                name: tanque
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - tanque.grigri.cloud
      secretName: tanque-external-tls
