apps/tanque/templates/stream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanque-stream
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.kubernetes.io/enabled: "true"
    external-dns.kubernetes.io/target: grigri.cloud
    nginx.ingress.kubernetes.io/auth-signin: https://auth.grigri.cloud/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: https://auth.grigri.cloud/oauth2/auth?allowed_groups=tanque-users@idm.grigri.cloud
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri = "/") {
        return 302 /stream.html?src=tcp_magic;
      }
spec:
  ingressClassName: nginx-external
  rules:
    - host: tanque-stream.grigri.cloud
      http:
        paths:
          - backend:
              service:
                name: tanque
                port:
                  number: 1984
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - tanque-stream.grigri.cloud
      secretName: tanque-stream-external-tls
